# haskell-learning

./: .gitignore  RWH
Category/: logger.hs
Get Programming with Haskell/Unit 1/: cycle.hs  fighting-robots.hs  my-cup.hs  my-take.hs  simple.hs  sortby.hs
Get Programming with Haskell/Unit 2/: blood-types.hs  cryptography.hs  dice.hs
Get Programming with Haskell/Unit 3/: bookstore.hs  colors.hs  composition.hs  data-map.hs  parameterized-types.hs  probability-tables.hs  time-series.hs
Get Programming with Haskell/Unit 4/: books.html  byteString.hs  data-text.hs  file-counts  file-counts-lazy.hs  file-counts.hi  file-counts.hs  glitcher  glitcher.hi  glitcher.hs  hello-file-2.hs  (+13 more)
Graham Hutton/: append-away.hs  base-conversion.hs  basicIO.hs  caesar-cipher.hs  compiler-correct.hs  data-types-classes.hs  even-odd.hs  fibonacci.hs  flake.nix  hangman.hs  hof.hs  insertion-sort.hs  nim.hs  positions.hs  prime-sieve.hs  primes.hs  quicksort.hs  recursion.hs  sorted-with-pairs.hs  sudoku.hs  test.hs  voting.hs
LYAH/: typesAndTypeclasses.hs
Learn you a Haskell/: Shapes.hs  baby.hs  customTypesAndTypeclasses.hs  hof.hs  modules.hs  recursion.hs  syntax.hs  test.hs
blog/: Add.hs  Html.hs  Markup.hs  README.md  Replicate.hs  colors.hs  hello.hs  hello.html  listStuff.hs
cis194/: credit-card-number.hs  hanoi.hs
gtk/: .Main.hs.swp  Main.hs
new-project/new-project/: flake.nix  hie.yaml  new-project.cabal
seas.upenn.edu/: sumtorial.hs
simple-haskell-project/: flake.nix  hie.yaml  simple-haskell-project.cabal
wikibooks/: BuildVocab.hs  SimpleIO.hs  VnF.hs  hello
(+143 files in other folders)
