cabal-version:   2.4
name:            simple-haskell-project
version:         0
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
description:     A simple Haskell project
author:          biscotty
maintainer:      biscotty - biscotty@email.com
copyright:       2024-11-17 biscotty
build-type:      Simple
extra-doc-files: 
  README.md
license:         NONE
  
common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: 
  ghc-options:

executable simple-haskell-project-exe
  import:         common-options
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
